Update TRONG NAY CO KET QUA CHAY.md